Closed Bug 411032 Opened 18 years ago Closed 18 years ago

###!!! ASSERTION: gtkwidget.c:7322: widget class `GtkToolbar' has no property named `wide-separators': 'glib assertion', file nsSigHandlers.cpp, line 197

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla1.9beta3

People

(Reporter: bzbarsky, Assigned: ventnor.bugzilla)

References

Details

Attachments

(1 file, 1 obsolete file)

Current Linux builds assert like crazy about there not being a 'wide-separators' property on toolbars. I'm not sure why we make this an assert, while gtk thinks it's a warning. This appears to be a regression from bug 406075 and it's making debugging absolutely miserable. There's also the separate issue of unbridled console spew from gtk itself here, so I wonder whether it's possible to quiet that down too.
Flags: blocking1.9?
What version of GTK are you using? http://live.gnome.org/Maemo/Gtk210Migration#line-90 says that wide-separators was added in 2.10, which is the minimum GTK+ version we "officially" support for Firefox 3, as per the Linux ref platform.
2.6 and 2.8 on different machines. I'll try to set up 2.10. Doing it is a huge pain in the behind. :(
Michael, can you look into the issue of making the GTK warning turn into a regular XPCOM warning?
The code that asserts looks like: 191 my_glib_log_func(const gchar *log_domain, GLogLevelFlags log_level, 192 const gchar *message, gpointer user_data) 193 { 194 orig_log_func(log_domain, log_level, message, NULL); 195 196 if (log_level & (G_LOG_LEVEL_ERROR | G_LOG_LEVEL_CRITICAL | G_LOG_LEVEL_WARNING)) { 197 NS_DebugBreak(NS_DEBUG_ASSERTION, message, "glib assertion", __FILE__, __LINE__); 198 } 199 } Perhaps we should differentiate between the different log levels here?
Attached patch Patch (obsolete) — Splinter Review
This should work. It separates the warning levels so now it will only assert on something that deserves an assertion, plus it will silence every G* warning on a non-debug build.
Assignee: nobody → ventnor.bugzilla
Status: NEW → ASSIGNED
Attachment #295687 - Flags: superreview?(roc)
Attachment #295687 - Flags: review?(roc)
Attached patch Patch 2Splinter Review
Roc said we should keep the current behaviour.
Attachment #295687 - Attachment is obsolete: true
Attachment #295689 - Flags: superreview?(roc)
Attachment #295689 - Flags: review?(roc)
Attachment #295687 - Flags: superreview?(roc)
Attachment #295687 - Flags: review?(roc)
Attachment #295689 - Flags: superreview?(roc)
Attachment #295689 - Flags: superreview+
Attachment #295689 - Flags: review?(roc)
Attachment #295689 - Flags: review+
Attachment #295689 - Flags: approval1.9?
Attachment #295689 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
Checking in xpfe/bootstrap/nsSigHandlers.cpp; /cvsroot/mozilla/xpfe/bootstrap/nsSigHandlers.cpp,v <-- nsSigHandlers.cpp new revision: 1.57; previous revision: 1.56 done
Keywords: checkin-needed
Target Milestone: --- → mozilla1.9 M11
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: