Bug 411032 - Separate the warning levels so that GTK+ warnings will only assert on something that deserves an assertion [p=ventnor.bugzilla@yahoo.com.au (Michael Ventnor) r+sr=roc a1.9=schrep]